# perf-computing-cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  log.txt
include/: main.cuh  main.h
src/: benchmarks.cpp  benchmarks.cu  benchmarks_parallel.cpp  filter.cu  main.cpp  main.cu
